--- a/Big_HW_3_Ponomarev/Frontend/Layout/NavMenu.razor.css
+++ b/Big_HW_3_Ponomarev/Frontend/Layout/NavMenu.razor.css
@@ -65,6 +65,33 @@
     color: white;
 }
 
+.nav-item ::deep .nav-link {
+    color: #d7d7d7;
+    background: none;
+    border: none;
+    display: flex;
+    align-items: center;
+    line-height: 3rem;
+    height: 3rem;
+}
+
+.nav-item ::deep .nav-link.active {
+    background-color: rgba(255,255,255,0.25);
+    color: white;
+}
+
+.nav-item ::deep .nav-link:hover {
+    background-color: rgba(255,255,255,0.1);
+    color: white;
+}
+
+.bi {
+    width: 2rem;
+    font-size: 1.1rem;
+    vertical-align: text-top;
+    top: -2px;
+}
+
 @media (min-width: 641px) {
     .navbar-toggler {
         display: none;
