--- a/Big_HW_3_Ponomarev/Frontend/wwwroot/css/app.css
+++ b/Big_HW_3_Ponomarev/Frontend/wwwroot/css/app.css
@@ -101,3 +101,10 @@ a, .btn-link {
 code {
     color: #c02d76;
 }
+
+/* Larger toast notifications */
+.toast {
+    font-size: 1.2rem;
+    min-width: 350px;
+}
+
