notification almost working..

--- a/Big_HW_3_Ponomarev/Frontend/Pages/Home.razor
+++ b/Big_HW_3_Ponomarev/Frontend/Pages/Home.razor
@@ -236,7 +236,21 @@
                 if (result.MessageType == System.Net.WebSockets.WebSocketMessageType.Text)
                 {
                     var message = System.Text.Encoding.UTF8.GetString(buffer, 0, result.Count);
-                    await JSRuntime.InvokeVoidAsync("showToastr", "info", message);
+                    try
+                    {
+                        var doc = System.Text.Json.JsonDocument.Parse(message);
+                        if (doc.RootElement.TryGetProperty("Balance", out var balanceElement))
+                        {
+                            activeAccount.Balance = balanceElement.GetDecimal();
+                            StateHasChanged();
+                        }
+                        var text = doc.RootElement.TryGetProperty("Message", out var msgEl) ? msgEl.GetString() : message;
+                        await JSRuntime.InvokeVoidAsync("showToastr", "info", text);
+                    }
+                    catch (System.Text.Json.JsonException)
+                    {
+                        await JSRuntime.InvokeVoidAsync("showToastr", "info", message);
+                    }
                 }
             }
             catch (OperationCanceledException) { break; }
