--- a/Big_HW_3_Ponomarev/Frontend/wwwroot/css/app.css
+++ b/Big_HW_3_Ponomarev/Frontend/wwwroot/css/app.css
@@ -103,7 +103,17 @@ code {
 }
 
 .toast {
-    font-size: 1.2rem;
-    min-width: 350px;
+    font-size: 1.5rem !important;
+    min-width: 525px !important;
 }
 
+
+.toast-success {
+    background-color: #28a745 !important;
+    color: #fff !important;
+}
+
+.toast-error {
+    background-color: #dc3545 !important;
+    color: #fff !important;
+}
